[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
clap = { version="3.0.14", features=["derive"]}
rayon = "1.5.1"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"